# ScummBarAI

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MEMORY.md  README.md  py_env.sh  pyproject.toml  ruff.toml  start.sh  telegram_bot.py
docs/: Agent activity logging.md  Build Your First Intelligent Agent Team- A Progressive Weather Bot with ADK.md  Context.md  Custom agent template workflows.md  Function tools.md  Get action confirmation for ADK Tools.md  Getting started.md  Managed agents.md  Memory- Long-Term Knowledge with MemoryService.md  Quickstart- Exposing a remote agent via A2A.md  Simple agents with LlmAgent.md  Skills for ADK agents.md  State- The Session's Scratchpad.md  Text generation.md  adk-dev-api-reference-python-google-adk-html.md  ai-google-dev-gemini-api-docs-latest-model.md  ai-google-dev-gemini-api-docs-prompting-strategies.md  ai-google-dev-gemini-api-docs-tokens.md  ai-google-dev-gemini-api-docs-whats-new-gemini-3-5.md  medium-com-google-cloud-2-minute-adk-speed-up-your-agent-wit.md
docs/deepseek/: api-docs-deepseek-com-guides-kv-cache.md  api-docs-deepseek-com-guides-thinking-mode.md  api-docs-deepseek-com-quick-start-error-codes.md  api-docs-deepseek-com.md  markdown-1784208769971.md  medium-com-yusuf4iaty-integrating-deepseek-with-google-adk-a.md
docs/gemini-nano-img/: ai-google-dev-gemini-api-docs-image-generation.md  ai-google-dev-gemini-api-docs-models-gemini-3-1-flash-image.md  ai-google-dev-gemini-api-docs-models-gemini-3-1-flash-lite-i.md
docs/telegram/: Bots- An introduction for developers.md  From BotFather to 'Hello World'.md  (+2 more)
(+24 files in other folders)
